feat: add news section

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&family=Poppins:wght@400;600;800&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body class="text-emerald-900 dark:text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
