style: text color title news section
fix: change auth api with get parameter

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="text-emerald-900 dark:text-white">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
